fix for disable tooltips not showing

--- a/resources/css/plugin.css
+++ b/resources/css/plugin.css
@@ -548,6 +548,10 @@ input[type="email"] {
 	background-color: #ffffff;
 }
 
+.btn.btn-icwp-wizard.disabled {
+	pointer-events: auto;
+}
+
 .content-wizards,
 .content-help {
 	background-color: #fafafa;
